# 2nd-course

evm/lab1/: main.c
evm/lab2/: bubble.c  raskrutka.c
evm/lab7/: Matrix.h
nsu.evm/lab5/: main.cpp
nsu.evm/lab6/: main.cpp
nsu.evm/lab7/: Matrix.cpp  MatrixBLAS.cpp  MatrixVector.cpp  main.cpp
nsu.evm/lab8/: main.cpp
nsu.evm/lab9/: main.cpp
nsu.oop.c++/CSVParser:lab0/: main.cpp
nsu.oop.c++/lab1/source/: BitArray.cpp
nsu.oop.c++/lab1/tests/: BitArray_test.cpp
nsu.oop.c++/lab2/: CMakeLists.txt  main.cpp  tests
nsu.oop.c++/lab2/controller/: controller.cpp  controller.h
nsu.oop.c++/lab2/model/: model.cpp  model.h
nsu.oop.c++/lab2/view/: view.cpp  view.h
nsu.oop.c++/lab3/: CMakeLists.txt  config.txt
nsu.oop.c++/lab3/src/: config_parser.cpp  config_parser.h  converters_factory.cpp  converters_factory.h  custom_exceptions.h  main.cpp  processor.cpp  processor.h  streams.cpp  streams.h  utils.cpp  utils.h  wav.cpp  wav.h
nsu.oop.c++/lab3/src/converters/: all_converters.h  converters_utils.cpp  cut_converter.cpp  mix_converter.cpp  mute_converter.cpp  mute_converter.h
nsu.oop.c++/lab4/: CMakeLists.txt  main.cpp  test1.csv
nsu.oop.java/lab1/: Lines.java  Main.java
nsu.opp/lab2/: openmp_slae_1.c  openmp_slae_2.c  openmp_slae_scheduler.c
